apply plugin: 'java'
apply plugin: 'idea'

version = '1.0.0'
sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')
    testImplementation('org.assertj:assertj-core:3.11.1')
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
}

test {
    useJUnitPlatform()
}
